--- a/eda_project_group_3.ipynb
+++ b/eda_project_group_3.ipynb
@@ -57,17 +57,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Objectives:\n",
-    "\n",
-    "The primary aim of this project is to conduct a thorough analysis of the dataset to identify significant insights. The ultimate goal is to predict Diabetes, hypertension and heart disease in patients and their relationship with each other.\n"
+    "## Objectives:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "Objective:\n",
     "The objective of exploratory data analysis (EDA) of the diabetes prediction dataset is to understand the data, identify patterns and trends, and develop hypotheses about the factors that contribute to diabetes. We will use data visualization techniques and statistical tests to explore the data and to develop a deeper understanding of the relationships between the features and the target variable (diabetes). We will also identify any outliers or anomalies in the data and assess its quality.\n",
     "\n",
     "Specifically, We will aim to answer the following questions:\n",
