--- a/eda_project_group_3.ipynb
+++ b/eda_project_group_3.ipynb
@@ -12,12 +12,12 @@
    "metadata": {},
    "source": [
     "# About Authors: \n",
-    "* Saif Ur Rehman\n",
-    "*  Zeeshan Shaukat\n",
+    "* Saif Ur Rehman - [email](saiful_rehman@yahoo.com)\n",
+    "*  Zeeshan Shaukat - [email](zeeshan.shaukat.uaf@gmail.com)\n",
     "* Raja Haris\n",
-    "* Muhammad Hamza Shakeel\n",
-    "* Ahmad Hassan\n",
-    "* Awais Haleem"
+    "* Muhammad Hamza Shakeel - [email](hamzashakeel3214@gmail.com)\n",
+    "* Ahmad Hassan - [email](Ahmhxn11@gmail.com)\n",
+    "* Awais Haleem - [email](awaishaleem20@gmail.com)"
    ]
   },
   {
