--- a/eda_project_group_3.ipynb
+++ b/eda_project_group_3.ipynb
@@ -12,12 +12,12 @@
    "metadata": {},
    "source": [
     "# About Authors: \n",
-    "* Saif Ur Rehman - [email](saiful_rehman@yahoo.com)\n",
-    "*  Zeeshan Shaukat - [email](zeeshan.shaukat.uaf@gmail.com)\n",
-    "* Raja Haris\n",
-    "* Muhammad Hamza Shakeel - [email](hamzashakeel3214@gmail.com)\n",
-    "* Ahmad Hassan - [email](Ahmhxn11@gmail.com)\n",
-    "* Awais Haleem - [email](awaishaleem20@gmail.com)"
+    "* Saif Ur Rehman - [email](mailto:saiful_rehman@yahoo.com)\n",
+    "*  Zeeshan Shaukat - [email](mailto:zeeshan.shaukat.uaf@gmail.com)\n",
+    "* Raja Haris - (mailto:harisraja964@gmail.com)\n",
+    "* Muhammad Hamza Shakeel - [email](mailto:hamzashakeel3214@gmail.com)\n",
+    "* Ahmad Hassan - [email](mailto:Ahmhxn11@gmail.com)\n",
+    "* Awais Haleem - [email](mailto:awaishaleem20@gmail.com)\n"
    ]
   },
   {
